tests/agl/rejections/type/bare_variant_non_enum.agl
enum Color
  | Red
  | Green

let x: int = 5
case x of
  | Red => print "red"
  | _   => print "other"
